tests/negative/class_private_method_call.far
class HasPrivateMethod {
  private fun secret() -> i64 { return 11 }
  public fun reveal() -> i64 { return secret() }
}

fun main() -> i64 {
  return HasPrivateMethod().secret()
}
